tests/mm0_mmu/fail/bad-sort3214.mmu
-- bad modifier order
(sort s3214 provable strict pure free)